src/snapshots/overflight__render__tests__demo_day_sky.snap
---
source: src/render.rs
expression: buffer_text(terminal.backend().buffer())
---
                                                  N
                                                ⢀⣀⣀⡀
                                       ⢀⣀⠤⠔⠒⠊⠉⠉⠉⠁  ⠈⠉⠉⠉⠑⠒⠢⠤⣀⡀
                                    ⡠⠔⠊⠁                    ⠈⠑⠢⢄
                                ⢀⡠⠖⠉AAL9600- ↙   LOG39D- →   ↑⠁VIR105+
                              ⢀⡔⠊                              ↗ SHT19D-
                            ⢀⡰⠃ ⢀           ⣀⡠⠤⠤⠤⠒⠒⠤⠤⠤⢄⣀             ⠘⢆⡀
                        EIN1XT ↖⠈↖ EZY42MY-⠉            ⠉⠓⢦⣄           ⠱⢄
                          ⡴⠁         ⢀⠔⠋                   →⠙CNK89-     ⠈⢦
                         ⡰⠁        ⢀⠜⠁                        ⠈⠣⡀      ↑⠂BAW21B+
                        ⡰⠁        ⡰⠋             ⢀⡀             ⠙⢆        ⠈⢆
                       ⢀⢇        ⡰⠃         ⣀⠴⠒⠉⠉⠁⠈⠉⠉⠒⠦⣀         ⠘⢆        ⠸⡀
                       ⡜→ SHT5X-⢰⠃        ⣠⠞⠁          ⠈⠳⣄        ⠘⡆        ⢣
                BAW889-⣇→BAW16MT-        ⣰⠃              ⠘⣆        ⢱        ⢸
                DAL10-⢰→→ BAW569J-       ⡇                ⢸        ⠸⡄       ⠈⡆
                     E⢸→ BAW759-        ⢸⡁                ⢈⡇        ⡇        ⡇W
                      ⠸⡀       ⠘⡆        ⡇                ⢸        ⢰⠃      →⢀UAL147+
                       ⡇        ⢇        ⠹⡄              ⢠⠏        ⡸      ⡀ ⢸
                       ⢣ ← SHT17Y-        ⠙⢦⡀          ⢀⡴⠋        ⢠⠇      ↘ BAW654+
                       ⠈⡎⠁       ⠱⡄         ⠉⠲⠤⣀⣀⡀⢀⣀⣀⠤⠖⠉         ⢠⠎        ⢰⠁
                        ⠱⡀        ⠱⣄             ⠈⠁             ⣠⠎    ↙ LNX12MO+
                         ⠱⡀        ⠈⢢⡀                        ⢀⡔⠁        ⢀⠎
                          ⠳⡀         ⠈⠢⣄                    ⣠⠔⠁      → BAW432+
                           ⠑⢆    ↗ VJT915-⢤⣀            ⣀⡤⠖⠋         ⠁ ⡰⠊
                            ⠈⠱⡄             ⠉⠑⠒⠒⠒⠤⠤⠒⠒⠒⠊⠉    ↓ N737M+ ⢠⠎⠁
                              ⠈⠣⢄                           ⠉      ↘⠜ECODU-
                                ⠈⠑⠦⣀              ↑ EIN714      ⣀⠴⠊⠁
                                    ⠑⠢⢄⡀          ↑ BAW26V  ⢀⡠⠔⠊
                                       ⠈⠉⠒⠢⠤⢄⣀⣀⣀⡀  ⢀⣠↗⣀EIX60P+
                                                ⠈⠉⠉⠁
                                                  S
demo · 26 aircraft · updated 0.6s ago
