src/snapshots/overflight__render__tests__demo_horizon.snap
---
source: src/render.rs
expression: buffer_text(terminal.backend().buffer())
---
looking north


















                          ← CNK89-



                                                           → AAL9600-

                     █              ← LOG39D-        █                             → EZY42MY-
      ↖█BAW21B+      █    ← SH←1BAW87AM-             █                 █             █→ EIN1XT
       █     █       █        ↗█VIR105+█     █       █         █       █     █       █         █
   █   █     █   █   █     █   █   █   █     █   █   █     █   █   █   █     █   █   █     █   █
   █ █ █   █ █   █ █ █   █ █   █   █ █ █   █ █   █ █ █   █ █   █   █ █ █   █ █   █ █ █   █ █   █
▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁█▁▁
demo · 27 aircraft · updated 0.6s ago
