src/snapshots/overflight__render__tests__demo_night_sky.snap
---
source: src/render.rs
expression: buffer_text(terminal.backend().buffer())
---
                                                  N
                                                ⢀⣀⣀⡀
                                       ⢀⣀⠤⠔⠒⠊⠉⠉⠉⠁  ⠈⠉⠉⠉⠑⠒⠢⠤⣀⡀
                                    ⡠⠔⠊⠅          ⢄        ⠄⠈⠑⠢⢄
                                ⢀⡠⠖⠉        ⠁↙ AAL9600-  → LOG39D-105+
                              ⢀⡔⠊   ⠂           ⠂  ⠈⢀       ⠄  ↗ SHT19D-
                            ⢀⡰⠃⠈⢀        ⠁  ⣀⡠⠤⠤⠤⠒⠒⠤⠤⠤⢄⣀      ⢀   ⠐  ⠘⢆⡀
                           ⡠⠎  ↖⠈↖IEZY42MY-⠉ ⠠       ⠄⢀ ⠉⠓⢦⣄⠂          ⠱⢄
                          ⡴⠁  ⠂      ⢄⠔⠋                   →⠙CNK89-     ✦⢦
                         ⡰⠡        ⢂⠜⠁                   ⡀    ⠈⡣⡀  ⠁⠉  ↑⠂BAW21B+
                        ⡰⠁   ⡀⠐   ⡰⠋⠐  ⠄       ⠄ ⢀⡀⠂ ⠠⠄    ⡀    ⠙⢆        ⠈⢆
                       ⢀⢇⠠       ⡰⠃         ⣀⠴⠒⠉⠉⠁⠈⠉⠉⠒⠦⣀     ⠄   ⠘⢆        ⠸⡀
                       ⡜→ SHT5X-⢰⠓     ⠈  ⣠⠞⠡⢀       ⠂ ⠈⠳⣄⠐  ⠈⠄ ⠈ ⠘⡆  ⢀     ⢣
                       ⣇→ BAW889-      ⡀ ⣲⠃              ⠘⣆✦       ⢱⠐       ⢸
                      ⢰→→SWR4✦H---       ⡇ ⠄⠂     ⠂    ✦ ⠈⢸        ⠸⡄⠁      ⠌⡆
                     E⢸→ BAW759-        ⢸⡁⢀        ⠐      ⢈⡇  ⡀     ⡇        ⡇W
                      ⠸⡀       ⠘⡆  ⠈     ⡇  ⠐   ⠠  ⠠ ⡀    ⢸ ⠐      ⢰⠃   ⢀  →⢀UAL147+
                       ♄   ⠈ ⠠  ⢇        ⠹⡄    ⠁         ⢠⠏  ⠐  ⠈  ⡸⠈     ⡀ ⢸
                       ⢣ ← SHT17Y-        ⠙⢦⡀  ⠂  ✦⠠   ⢀⡴⠋   ⠄ ⠁⡄ ⢠⠇      ↘ BAW654+
                       ⠈⡎⠁       ⠱⡄         ⠉⠲⠬⣀⣀⡀⢀⣠⣀⠤⠖⠙ ⠁    ⠁  ⢠⠎⠂  ⠁    ⢰⠁
                        ⠱⡀        ⠱⣄  ⠄          ⠈⠁ ⠐    ⠁      ⣠⠎  ⠂ ↙ LNX12MO+
                         ⠱⡀        ⠈⢢⡀       ⠠  ⡀           ⠂ ⢀⡔⠁     ⠄  ⢀⠎
                          ⠳⡀    ⠁⠂   ⠈⠢⣄⠐⠠⠈          ⠄      ⣠⠔⠡⠄   ⠈ → BAW432+
                           ⠑⢆  ⢀ ↗ VJT915-⢤⣁    ⠂ ⠂     ⣀⡤⠖⠋     ⠁ ⠂ ⠁⠄⡰⠊
                            ⠈⠱⡄     ⠂       ⠉⠑⠒⠒⠒⠤⠤⠒⠒⠒⠊⡉ ⡀  ↓ N737M+ ⢠⠎⠁
                              ⠈⠣⢄         ⠄     ⠄      ⠠ ⠄  ⠉      ↘⠜ECODU-
                                ⠈⠑⠦⣀    ⠑   ⠂ ⠄   ↑ EIN☾14     ⠂⣀⠴⠊⠁
                                    ⠑⠢⢄⡀          ↑ BAW26V  ⢄⡠⠔⠊
                                       ⠈⠉⠒⠢⠤⢄⣀⣀⣂⡀  ⢀⣠↗⣀EIX60P+
                                                ⠈⠉⠉⠁
                                                  S
demo · 26 aircraft · updated 0.6s ago
