src/snapshots/overflight__render__tests__demo_sky.snap
---
source: src/render.rs
expression: buffer_text(terminal.backend().buffer())
---
                                                  N
                                                ⢀⣀⣀⡀
                                       ⢀⣀⠤⠔⠒⠊⠉⠉⠉⠁  ⠈⠉⠉⠉⠑⠒⠢⠤⣀⡀
                                    ⡠⠔⠊⠁                    ⡈⠑⠢⢄
                                ⢀⡠⠖⠉         ↙ AAL9600-  → LO→3BAW87AM-
                              ⢀⡔⠊                              ↗ SHT19D-
                            ⢀⡰⠃ ⢀           ⣀⡠⠤⠤⠤⠒⠒⠤⠤⠤⢄⣀             ⠘⢆⡀
                           ⡠⠎  ↖⠈↖IEZY42MY-⠉            ⠉⠓⢦⣄           ⠱⢄
                          ⡴⠁         ⢀⠔⠋                   →⠙CNK89-     ⠈⢦
                         ⡰⠁        ⢀⠜⠁                        ⠈⠣⡀      ↑⠂BAW21B+
                        ⡰⠁        ⡰⠋             ⢀⡀             ⠙⢆        ⠈· BAW21ML
                       ⢀⢇        ⡰⠃         ⣀⠴⠒⠉⠉⠁⠈⠉⠉⠒⠦⣀         ⠘⢆        ⠸⡀
                       ⡜→ SHT5X-⢰⠃        ⣠⠞⠁          ⠈⠳⣄        ⠘⡆        ⢣
                       ⣇→ BAW889-        ⣰⠃              ⠘⣆        ⢱        ⢸
                      ⢰→→SWR4AH---       ⡇                ⢸        ⠸⡄       ⠈⡆
                     E⢸→ BAW759-        ⢸⡁                ⢈⡇        ⡇        ⡇W
                      ⠸⡀       ⠘⡆        ⡇                ⢸        ⢰⠃      →⢀UAL147+
                       ⡇        ⢇        ⠹⡄              ⢠⠏        ⡸      ⡀ ⢸
                       ⢣ ← SHT17Y-        ⠙⢦⡀          ⢀⡴⠋        ⢠⠇      ↘ BAW654+
                       ⠈⡎⠁       ⠱⡄         ⠉⠲⠤⣀⣀⡀⢀⣀⣀⠤⠖⠉         ⢠⠎        ⢰⠁
                        ⠱⡀        ⠱⣄             ⠈⠁             ⣠⠎    ↙ LNX12MO+
                         ⠱⡀        ⠈⢢⡀                        ⢀⡔⠁        ⢀⠎
                          ⠳⡀         ⠈⠢⣄                    ⣠⠔⠁      → BAW432+
                           ⠑⢆    ↗ VJT915-⢤⣀            ⣀⡤⠖⠋         ⠁ ⡰⠊
                            ⠈⠱⡄             ⠉⠑⠒⠒⠒⠤⠤⠒⠒⠒⠊⠉    ↓ N737M+ ⢠⠎⠁
                              ⠈⠣⢄                           ⠉      ↘⠜ECODU-
                                ⠈⠑⠦⣀              ↑ EIN714      ⣀⠴⠊⠁
                                    ⠑⠢⢄⡀          ↑ BAW26V  ⢀⡠⠔⠊
                                       ⠈⠉⠒⠢⠤⢄⣀⣀⣀⡀  ⢀⣠↗⣀EIX60P+
                                                ⠈⠉⠉⠁
                                                  S
demo · 57 aircraft · updated 0.6s ago
